--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
       ]
    },
    "devDependencies": {
-      "gh-pages": "^5.0.0"
+      "gh-pages": "^5.0.0",
+      "group": "^1.0.2",
+      "react-transition": "^1.0.3"
    }
 }
